# embedded-cpp-onboarding

./: Answers.md
part1/: meson.build
part1/src/: meson.build  static_stack.hpp
part1/tests/: meson.build  test_static_stack.cpp
part2/src/: meson.build  raw_buffer.hpp  static_ring_buffer.hpp  static_stack.hpp
part2/tests/: meson.build  test_static_stack.cpp
